Sun Apr 26 13:30:10 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/Simplifier.java (While): must loop.

Sun Apr 26 13:22:39 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/Simplifier.java (SuffixOp): too few
	  deref.

	* net/loveruby/cflat/compiler/Simplifier.java (MemberNode): should
	  set type.

	* net/loveruby/cflat/compiler/Simplifier.java (PtrMemberNode):
	  should set type.

	* net/loveruby/cflat/compiler/Simplifier.java (Deref, Addr):
	  should compile child expr.

	* net/loveruby/cflat/ast/BinaryOpNode.java (ctor): accept type.

	* net/loveruby/cflat/ast/TypeNode.java (location): do not raise
	  exception when no typeRef exist.

Sun Apr 26 12:17:51 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/asm/PeepholeOptimizer.java: fix bad operator
	  mnemonic. (fixes 4E)

Mon Apr 20 03:52:10 2009  Minero Aoki  <aamine@loveruby.net>

	* now many tests work (30/1709 failed).

	* net/loveruby/cflat/compiler/Simplifier.java: set location of
	  AssignStmtNode.

	* net/loveruby/cflat/compiler/Simplifier.java: allocate tmp
	  variable in scope.

	* net/loveruby/cflat/compiler/Simplifier.java: opAssign/inc/dec
	  handling was completely wrong (there still be some problems yet).

	* net/loveruby/cflat/compiler/CodeGenerator.java (compileLHS):
	  implemented for IR.

	* net/loveruby/cflat/compiler/CodeGenerator.java (loadVarible):
	  implemented for IR.

Mon Apr 20 00:39:13 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/ast/IR.java: new class to represents IR.

Sun Apr 19 23:52:37 2009  Minero Aoki  <aamine@loveruby.net>

	* new class Simplifier (it is really a IR generator).  Passes
	  compilation, but not tested.

Sun Apr 19 14:57:22 2009  Minero Aoki  <aamine@loveruby.net>

	* refactoring: rename class: compiler/Simplifier.java ->
	  IRGenerator.java.

	* compiler/Compiler.java: ditto.

Sun Apr 12 17:49:19 2009  Minero Aoki  <aamine@loveruby.net>
