@@ -1,3 +1,7 @@
+Sun Apr 26 13:50:54 2009  Minero Aoki  <aamine@loveruby.net>
+
+	* net/loveruby/cflat/ast/FuncallNode.java: detect static call.
+
 Sun Apr 26 13:30:10 2009  Minero Aoki  <aamine@loveruby.net>
 
 	* net/loveruby/cflat/compiler/Simplifier.java (While): must loop.
